--- a/package.json
+++ b/package.json
@@ -15,11 +15,16 @@
     "serve-favicon": "~2.3.0"
   },
   "devDependencies": {
+    "babel-core": "^6.14.0",
+    "babel-loader": "^6.2.5",
+    "babel-preset-es2015": "^6.14.0",
+    "babel-preset-react": "^6.11.1",
     "grunt": "^1.0.1",
     "grunt-coffee-react": "^5.0.1",
     "grunt-contrib-cssmin": "^1.0.2",
     "grunt-contrib-less": "^1.4.0",
     "grunt-contrib-watch": "^1.0.0",
+    "grunt-webpack": "^1.0.14",
     "jsx-loader": "^0.13.2",
     "webpack": "^1.13.2"
   }
