--- a/package.json
+++ b/package.json
@@ -1,31 +1,38 @@
 {
-  "name": "blog",
-  "version": "0.0.0",
-  "private": true,
+  "name": "hexson.github.io",
+  "version": "1.0.0",
+  "description": "Personal blog",
+  "author": "hexson",
   "scripts": {
-    "start": "node ./bin/www"
+    "start": "NODE_ENV=development webpack-dev-server --hot --inline",
+    "build": "NODE_ENV=production webpack",
+    "start:win": "set NODE_ENV=development && webpack-dev-server --hot --inline",
+    "build:win": "set NODE_ENV=production && webpack"
   },
   "dependencies": {
-    "body-parser": "~1.13.2",
-    "cookie-parser": "~1.3.5",
-    "debug": "~2.2.0",
-    "express": "~4.13.1",
-    "jade": "~1.11.0",
-    "morgan": "~1.6.1",
-    "serve-favicon": "~2.3.0"
+    "react": "^15.3.2",
+    "react-dom": "^15.3.2",
+    "react-router": "^2.8.1",
+    "zepto": "^1.2.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
-    "grunt": "^1.0.1",
-    "grunt-coffee-react": "^5.0.1",
-    "grunt-contrib-cssmin": "^1.0.2",
-    "grunt-contrib-less": "^1.4.0",
-    "grunt-contrib-watch": "^1.0.0",
-    "grunt-webpack": "^1.0.14",
-    "jsx-loader": "^0.13.2",
-    "webpack": "^1.13.2"
+    "css-loader": "^0.25.0",
+    "del": "^2.2.2",
+    "extract-text-webpack-plugin": "^1.0.1",
+    "file-loader": "^0.9.0",
+    "less": "^2.7.1",
+    "less-loader": "^2.2.3",
+    "open-browser-webpack-plugin": "0.0.2",
+    "quickly-copy-file": "^1.0.0",
+    "react-hot-loader": "^3.0.0-beta.5",
+    "style-loader": "^0.13.1",
+    "url-loader": "^0.5.7",
+    "webpack": "^1.13.2",
+    "webpack-dev-server": "^1.16.1",
+    "webpack-md5-hash": "0.0.5"
   }
 }
