--- a/package.json
+++ b/package.json
@@ -3,6 +3,10 @@
   "version": "1.0.0",
   "description": "Personal blog",
   "author": "hexson",
+  "repository": {
+    "type": "git",
+    "url": "https://github.com/hexson/hexson.github.io.git"
+  },
   "scripts": {
     "start": "NODE_ENV=development webpack-dev-server --hot --inline",
     "build": "NODE_ENV=production webpack",
