--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:win": "set NODE_ENV=production && webpack"
   },
   "dependencies": {
+    "jquery": "^1.11.1",
     "marked": "^0.3.6",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
