--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
   "dependencies": {
     "jquery": "^1.11.1",
     "marked": "^0.3.6",
+    "nprogress": "^0.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
     "react-router": "^2.8.1",
