--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
     "build:win": "set NODE_ENV=production && webpack"
   },
   "dependencies": {
+    "highlight.js": "^9.7.0",
     "jquery": "^1.11.1",
     "marked": "^0.3.6",
     "nprogress": "^0.2.0",
