--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "hexson.github.io",
-  "version": "1.0.0",
+  "version": "2.0.0",
   "description": "Personal blog",
   "author": "hexson",
   "repository": {
@@ -8,10 +8,8 @@
     "url": "https://github.com/hexson/hexson.github.io.git"
   },
   "scripts": {
-    "start": "NODE_ENV=development webpack-dev-server --hot --inline",
-    "build": "NODE_ENV=production webpack",
-    "start:win": "set NODE_ENV=development && webpack-dev-server --hot --inline",
-    "build:win": "set NODE_ENV=production && webpack"
+    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
+    "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
     "highlight.js": "^9.7.0",
@@ -20,14 +18,16 @@
     "nprogress": "^0.2.0",
     "react": "^15.3.2",
     "react-dom": "^15.3.2",
+    "react-redux": "^5.0.2",
     "react-router": "^2.8.1",
-    "zepto": "^1.2.0"
+    "redux": "^3.6.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
     "babel-loader": "^6.2.5",
     "babel-preset-es2015": "^6.14.0",
     "babel-preset-react": "^6.11.1",
+    "cross-env": "^3.1.4",
     "css-loader": "^0.25.0",
     "del": "^2.2.2",
     "extract-text-webpack-plugin": "^1.0.1",
