--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
+    "es6-promise": "^4.0.5",
     "highlight.js": "^9.7.0",
+    "isomorphic-fetch": "^2.2.1",
     "jquery": "^1.11.1",
     "marked": "^0.3.6",
     "nprogress": "^0.2.0",
@@ -20,7 +22,8 @@
     "react-dom": "^15.3.2",
     "react-redux": "^5.0.2",
     "react-router": "^2.8.1",
-    "redux": "^3.6.0"
+    "redux": "^3.6.0",
+    "redux-thunk": "^2.1.0"
   },
   "devDependencies": {
     "babel-core": "^6.14.0",
