--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "url": "https://github.com/hexson/hexson.github.io.git"
   },
   "scripts": {
-    "start": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
     "build": "cross-env NODE_ENV=production webpack"
   },
   "dependencies": {
