--- a/package.json
+++ b/package.json
@@ -8,41 +8,50 @@
     "url": "https://github.com/hexson/hexson.github.io.git"
   },
   "scripts": {
-    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline",
-    "build": "cross-env NODE_ENV=production webpack"
+    "dev": "cross-env NODE_ENV=development webpack-dev-server --hot --inline --progress --profile --open --mode development",
+    "build": "cross-env NODE_ENV=production webpack --mode production"
   },
   "dependencies": {
-    "es6-promise": "^4.0.5",
-    "highlight.js": "^9.7.0",
+    "antd": "^3.3.3",
+    "es6-promise": "^4.2.4",
+    "highlight.js": "^9.12.0",
     "isomorphic-fetch": "^2.2.1",
-    "marked": "^0.3.6",
+    "marked": "^0.3.19",
     "nprogress": "^0.2.0",
-    "react": "^15.3.2",
-    "react-dom": "^15.3.2",
-    "react-redux": "^5.0.2",
-    "react-router": "^2.8.1",
-    "redux": "^3.6.0",
-    "redux-thunk": "^2.1.0"
+    "react": "^16.2.0",
+    "react-dom": "^16.2.0",
+    "react-loadable": "^5.3.1",
+    "react-redux": "^5.0.7",
+    "react-router": "^4.2.0",
+    "react-router-dom": "^4.2.2",
+    "react-router-redux": "^4.0.8",
+    "redux": "^3.7.2",
+    "redux-saga": "^0.16.0"
   },
   "devDependencies": {
-    "babel-core": "^6.14.0",
-    "babel-loader": "^6.2.5",
-    "babel-preset-es2015": "^6.14.0",
-    "babel-preset-react": "^6.11.1",
-    "cross-env": "^3.1.4",
-    "css-loader": "^0.25.0",
-    "del": "^2.2.2",
-    "extract-text-webpack-plugin": "^1.0.1",
-    "file-loader": "^0.9.0",
-    "less": "^2.7.1",
-    "less-loader": "^2.2.3",
-    "open-browser-webpack-plugin": "0.0.2",
-    "quickly-copy-file": "^1.0.0",
-    "react-hot-loader": "^3.0.0-beta.5",
-    "style-loader": "^0.13.1",
-    "url-loader": "^0.5.7",
-    "webpack": "^1.13.2",
-    "webpack-dev-server": "^1.16.1",
-    "webpack-md5-hash": "0.0.5"
+    "babel-core": "^6.26.0",
+    "babel-loader": "^7.1.4",
+    "babel-plugin-syntax-dynamic-import": "^6.18.0",
+    "babel-preset-env": "^1.6.1",
+    "babel-preset-es2015": "^6.24.1",
+    "babel-preset-react": "^6.24.1",
+    "copy-webpack-plugin": "^4.5.1",
+    "cross-env": "^5.1.4",
+    "css-loader": "^0.28.11",
+    "del": "^3.0.0",
+    "file-loader": "^1.1.11",
+    "html-webpack-plugin": "^3.1.0",
+    "less": "^3.0.1",
+    "less-loader": "^4.1.0",
+    "raw-loader": "^0.5.1",
+    "react-hot-loader": "^4.0.0",
+    "style-loader": "^0.20.3",
+    "uglifyjs-webpack-plugin": "^1.2.4",
+    "url-loader": "^1.0.1",
+    "webpack": "^4.3.0",
+    "webpack-cli": "^2.0.13",
+    "webpack-dev-server": "^3.1.1",
+    "webpack-md5-hash": "^0.0.6",
+    "webpack-merge": "^4.1.2"
   }
 }
