--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "isomorphic-fetch": "^2.2.1",
     "marked": "^0.3.19",
     "nprogress": "^0.2.0",
+    "rc-queue-anim": "^1.4.1",
     "react": "^16.2.0",
     "react-dom": "^16.2.0",
     "react-loadable": "^5.3.1",
@@ -35,6 +36,7 @@
     "babel-preset-env": "^1.6.1",
     "babel-preset-es2015": "^6.24.1",
     "babel-preset-react": "^6.24.1",
+    "babel-preset-stage-0": "^6.24.1",
     "copy-webpack-plugin": "^4.5.1",
     "cross-env": "^5.1.4",
     "css-loader": "^0.28.11",
